melhorias no template e adicionando a fita

--- a/sbcars.html
+++ b/sbcars.html
@@ -1,14 +1,11 @@
 ---
-layout: padrao
+layout: event
+title: XII Brazilian Symposium on Software Components, Architectures, and Reuse (SBCARS)
 ---
 
-<section id="sbcars">
-    <h2 class="section-title">XII Brazilian Symposium on Software Components,
-        Architectures, and Reuse (SBCARS)</h2>
-    <p>The Brazilian Symposium on Software Components,
-        Architectures, and Reuse (SBCARS) is promoted by the Brazilian Computer Society (SBC) and attracts researchers,
-        students, and practitioners interested in a broad range of software engineering topics, including software
-        product lines, component-based development, software architecture, and reuse. Previous editions of the
-        symposium offered a strong technical program, keynote talks by leaders in the field, and tutorials regarding
-        state-of-art topics.</p>
-</section>
+The Brazilian Symposium on Software Components,Architectures, and Reuse (SBCARS) is promoted by the Brazilian Computer
+Society (SBC) and attracts researchers,
+students, and practitioners interested in a broad range of software engineering topics, including software
+product lines, component-based development, software architecture, and reuse. Previous editions of the
+symposium offered a strong technical program, keynote talks by leaders in the field, and tutorials regarding
+state-of-art topics.
