--- a/sbcars.html
+++ b/sbcars.html
@@ -4,8 +4,5 @@ title: XII Brazilian Symposium on Software Components, Architectures, and Reuse 
 ---
 
 The Brazilian Symposium on Software Components,Architectures, and Reuse (SBCARS) is promoted by the Brazilian Computer
-Society (SBC) and attracts researchers,
-students, and practitioners interested in a broad range of software engineering topics, including software
-product lines, component-based development, software architecture, and reuse. Previous editions of the
-symposium offered a strong technical program, keynote talks by leaders in the field, and tutorials regarding
+Society (SBC) and attracts researchers, students, and practitioners interested in a broad range of software engineering topics, including software product lines, component-based development, software architecture, and reuse. Previous editions of the symposium offered a strong technical program, keynote talks by leaders in the field, and tutorials regarding
 state-of-art topics.
