--- a/sbes.html
+++ b/sbes.html
@@ -7,10 +7,12 @@ title: XXXII Brazilian Symposium on Software Engineering
 	<hr class="center w50p">
 </div> -->
 <h2>SBES 2018 will include three tracks:</h2>
-<p class="m-l-5p ng-scope" translate="SBES.SBES.P2SBES">The <a href="/#/sbes#researchTrackSbes" ng-click="selectMenu(1)">Research
-		Track</a> publishes solid results with a strong contribution to the Software Engineering community.<br>The <a href="/#/sbes#ideasTrackSbes"
-	 ng-click="selectMenu(2)">Insightful Ideas &amp; Emerging Results Track</a> provides an opportunity for researchers
-	and practitioners to submit and present innovative and promising ideas and results in early stages of research.<br>The
-	<a href="/#/sbes#educationTrackSbes" ng-click="selectMenu(3)">Education Track</a> (former FEES - Forum of Education in
-	Software Engineering) publishes papers that address challenges, innovations, and best practices in Software
-	Engineering education.<br></p>
+
+The <a href="/#/sbes#researchTrackSbes"
+ ">Research Track</a> publishes solid results with a strong contribution to the Software Engineering community.<br>
+
+The <a href="/#/sbes#ideasTrackSbes"
+ "> Insightful Ideas &amp; Emerging Results Track</a> provides an opportunity for researchers and practitioners to submit and present innovative and promising ideas and results in early stages of research.<br>
+	
+	The <a href="/#/sbes#educationTrackSbes"
+ ">Education Track</a> (former FEES - Forum of Education in Software Engineering) publishes papers that address challenges, innovations, and best practices in Software Engineering education.<br></p>
