--- a/sbcars.html
+++ b/sbcars.html
@@ -1,6 +1,6 @@
 ---
 layout: event
-title: XII Brazilian Symposium on Software Components, Architectures, and Reuse (SBCARS)
+title: XIII Brazilian Symposium on Software Components, Architectures, and Reuse (SBCARS)
 ---
 
 The Brazilian Symposium on Software Components,Architectures, and Reuse (SBCARS) is promoted by the Brazilian Computer
