--- a/sblp.html
+++ b/sblp.html
@@ -1,6 +1,6 @@
 ---
 layout: event
-title: XXII Brazilian Symposium on Programming Languages
+title: XXIII Brazilian Symposium on Programming Languages
 ---
 
 The Brazilian Symposium on Programming Languages is a Brazilian symposium promoted by the Brazilian Computer Society (SBC) and aimed at the study of programming languages from both practical and theoretical viewpoints. <br><br>
