--- a/sbes.html
+++ b/sbes.html
@@ -1,12 +1,12 @@
 ---
 layout: event
-title: XXXII Brazilian Symposium on Software Engineering
+title: XXXIII Brazilian Symposium on Software Engineering
 ---
 
 <!-- <div class="col-md-12">
 	<hr class="center w50p">
 </div> -->
-<h2>SBES 2018 will include three tracks:</h2>
+<h2>SBES 2019 will include three tracks:</h2>
 
 The <a href="/#/sbes#researchTrackSbes"
  ">Research Track</a> publishes solid results with a strong contribution to the Software Engineering community.<br>
