--- a/conference_banquet.html
+++ b/conference_banquet.html
@@ -1,13 +1,13 @@
 ---
 layout: padrao
 title: Conference Banquet
+permalink: /conferencebanquet
 ---
 
 <section>
     <h1 class="section-title ng-scope" translate="">Conference Banquet</h1>
     <h3 class="banquet-new ng-scope" translate="">****NEW PLACE****</h3>
-    <p translate="" class="ng-scope">The conference banquet will take place on 19/09 at 20h at Espaço 7.<br>Limited
-        places available. Make your reservation at online registration</p>
+    <p translate="" class="ng-scope">The conference banquet will take place on 19/09 at 20h at Espaço 7.<br>Limited places available. Make your reservation at online registration</p>
     <div id="slideShow" class="row m-t-5p">
         <div class="col-md-1 col-sm-1 col-xs-1"></div>
         <div class="col-md-10 col-sm-10 col-xs-10 slider slick-initialized slick-slider slick-dotted"><button class="slick-prev slick-arrow"
