--- a/sbes.html
+++ b/sbes.html
@@ -1,6 +1,7 @@
 ---
 layout: event
 title: XXXIII Brazilian Symposium on Software Engineering
+permalink: /sbes
 ---
 
 <!-- <div class="col-md-12">
