--- a/sblp.html
+++ b/sblp.html
@@ -1,11 +1,12 @@
 ---
 layout: event
 title: XXIII Brazilian Symposium on Programming Languages
+permalink: /sblp
 ---
 
 The Brazilian Symposium on Programming Languages is a Brazilian symposium promoted by the Brazilian Computer Society (SBC) and aimed at the study of programming languages from both practical and theoretical viewpoints. <br><br>
 
-SBLP is the premiere technical and scientific event in Brazil in the area of programming languages. Its first edition took place in 1996 and in 2018 its 22nd edition will be held. Since 2010, it’s become part of CBSoft. In its next edition, SBLP will be held in September 20th and 21st, 2018. <br><br>
+SBLP is the premiere technical and scientific event in Brazil in the area of programming languages. Its first edition took place in 1996 and in 2019 its 23nd edition will be held. Since 2010, it’s become part of CBSoft. In its next edition, SBLP will be held in September 20th and 21st, 2018. <br><br>
 
 SBLP aims to create a forum for researchers, students and professionals to present and discuss principles and innovations in the design, definition, analysis, processing and implementation of
 programming languages.
