--- a/sblp.html
+++ b/sblp.html
@@ -1,7 +1,7 @@
 ---
 layout: event
 title: XXIII Brazilian Symposium on Programming Languages
-permalink: /sblp
+#permalink: /sblp
 ---
 
 The Brazilian Symposium on Programming Languages is a Brazilian symposium promoted by the Brazilian Computer Society (SBC) and aimed at the study of programming languages from both practical and theoretical viewpoints. <br><br>
