adicionar São Carlos 2018

--- a/cbsoft_previous_editions.html
+++ b/cbsoft_previous_editions.html
@@ -7,27 +7,27 @@ title: CBSOFT - Previous Editions
     <div class="card bg-light mb-3" style="max-width: 18rem;">
         <div class="card-header">CBSOFT 2010 - Salvador, BA</div>
         <div class="card-body">
-            <a href="http://wiki.dcc.ufba.br/CBSOFT/" target="_blank"><img style="width: 100%;" src="assets/images/locais/1.jpg"
+            <a href="http://cbsoft.org/cbsoft2010" target="_blank"><img style="width: 100%;" src="assets/images/locais/1.jpg"
                     alt="CBSOFT 2010"></a>
         </div>
     </div>
     <div class="card bg-light mb-3" style="max-width: 18rem;">
         <div class="card-header">CBSOFT 2011 - São Paulo, SP</div>
         <div class="card-body">
-            <a href="http://www.each.usp.br/cbsoft2011/" target="_blank"><img style="width: 100%;" src="assets/images/locais/2.jpg"></a>
+            <a href="http://cbsoft.org/cbsoft2011" target="_blank"><img style="width: 100%;" src="assets/images/locais/2.jpg"></a>
         </div>
     </div>
     <div class="card bg-light mb-3" style="max-width: 18rem;">
         <div class="card-header">CBSOFT 2012 - Natal, RN</div>
         <div class="card-body">
-            <a href="http://www.cbsoft.dimap.ufrn.br/" target="_blank"><img style="width: 100%;" src="assets/images/locais/3.jpg"></a>
+            <a href="http://cbsoft.org/cbsoft2012" target="_blank"><img style="width: 100%;" src="assets/images/locais/3.jpg"></a>
         </div>
     </div>
 
     <div class="card bg-light mb-3" style="max-width: 18rem;">
         <div class="card-header">CBSOFT 2013 - Brasília, DF</div>
         <div class="card-body">
-            <a href="http://cbsoft2013.unb.br/" target="_blank"><img style="width: 100%;" src="assets/images/locais/4.jpg"></a>
+            <a href="http://cbsoft.org/cbsoft2013" target="_blank"><img style="width: 100%;" src="assets/images/locais/4.jpg"></a>
         </div>
     </div>
 </div>
@@ -36,7 +36,7 @@ title: CBSOFT - Previous Editions
     <div class="card bg-light mb-3" style="max-width: 18rem;">
         <div class="card-header">CBSOFT 2014 - Maceió, AL</div>
         <div class="card-body">
-            <a href="http://www.ic.ufal.br/evento/cbsoft2014/" target="_blank"><img style="width: 100%;" src="assets/images/locais/5.jpg"></a>
+            <a href="http://cbsoft.org/cbsoft2014" target="_blank"><img style="width: 100%;" src="assets/images/locais/5.jpg"></a>
         </div>
     </div>
 
@@ -57,7 +57,16 @@ title: CBSOFT - Previous Editions
     <div class="card bg-light mb-3" style="max-width: 18rem;">
         <div class="card-header">CBSOFT 2017 - Fortaleza, CE</div>
         <div class="card-body">
-            <a href="http://www.lia.ufc.br/~cbsoft2017/" target="_blank"><img style="width: 100%;" src="assets/images/locais/8.jpg"></a>
+            <a href="http://cbsoft.org/cbsoft2017" target="_blank"><img style="width: 100%;" src="assets/images/locais/8.jpg"></a>
+        </div>
+    </div>
+</div>
+
+<div class="card-deck"></div>
+    <div class="card bg-light mb-3" style="max-width: 18rem;">
+        <div class="card-header">CBSOFT 2018 - São Carlos, SP</div>
+        <div class="card-body">
+            <a href="ttp://cbsoft.org/cbsoft2018" target="_blank"><img style="width: 100%;" src="assets/images/locais/9.jpg"></a>
         </div>
     </div>
 </div>
